@@ -37,7 +37,10 @@ rule libtorrent_linking ( properties * )
 
     if <boost>source in $(properties)
     {
-        if <boost-link>shared in $(properties)
+	# linux must link dynamically against boost python because it pulls
+	# in libpthread, which must be linked dynamically since we're building a .so
+	# (the static build of libpthread is not position independent)
+        if <boost-link>shared in $(properties) || <target-os>linux in $(properties)
         {
             result += <library>/boost/python//boost_python/<link>shared ;
         }
